Remove jumps because bugie in tooltips

--- a/ubumlaas/static/css/custom.css
+++ b/ubumlaas/static/css/custom.css
@@ -128,6 +128,7 @@ tr.align-middle td{
 #makers{
     position: relative !important;
     display: flex;
+    align-items: stretch;
 
 }
 
